# NAVEGADOR_PEREIRA

./: .gitignore  CHECK_REQUIREMENTS.ps1  DEMO_QUICK.ps1  DEMO_SIMPLE.ps1  LICENSE  QUICK_START.md  README.md
.claude/: settings.local.json
.github/workflows/: auto-sync-chromium.yml  build-release.yml
NavegadorPereira-Portable/: .gitignore  ACTUALIZAR.bat  COMO-USAR.txt  EJECUTAR-AHORA.bat  INICIO.txt  INSTALAR-SIMPLE.bat  INSTALAR.bat  LEEME-PRIMERO.txt  PROGRAMAR-ACTUALIZACIONES.bat  Pereira.bat  README-VINTAGE.md  README.txt  TEMA-VINTAGE.txt
NavegadorPereira-Portable/config/: blocked-domains.txt  flags.txt  master_preferences  nueva-pestana.html  preferences.json  tema-vintage.css
NavegadorPereira-Portable/scripts/: actualizar.ps1  aplicar-tema.bat  instalar.ps1  programar-updates.ps1
configs/performance/: optimization.gn
configs/privacy/: blocked-domains.txt  default-preferences.json  disable-google-services.gn
docs/: BUILD.md  FAQ.md  PRIVACY.md  SECURITY.md
scripts/: build.ps1  build.sh  security-audit.sh  setup.ps1  setup.sh  sync-chromium.ps1  sync-chromium.sh
